--- a/style/style.css
+++ b/style/style.css
@@ -10,10 +10,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/*estilo registro.php*/
 .contenedor-total{
     background-color: #A6A6A6;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: block;
 }
 
@@ -58,7 +59,7 @@ body {
 }
 
 
-/*index.php estilo*/
+/*header.php estilo*/
 
 .header {
     overflow: hidden;
@@ -87,4 +88,19 @@ i{
     font-family: 'Aileron 300', sans-serif;
 }
 
+/*estilo perfil.php*/
+.contenedor-perfil{
+    height: 50%;
+    width: 25%;
+    position: absolute;
+    margin-top: 10px;
+    background-color: #D2C2B0;
+    text-align: center;
 
+
+}
+.imagen-perfil{
+    width: 200px;
+    height: 200px;
+    margin-top: 10px;
+}
