--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
 body {
     margin: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #A6A6A6;
 
 }
 
@@ -16,17 +15,15 @@ body {
 .contenedor-total{
     margin-top: 10px;
     margin-bottom: 10px;
-    display: block;
 }
-
+/*centra los dos div en los que están contenidos los formularios*/
 .tabla1{
    margin: 0 auto;
 }
-
 .tabla2{
     margin: 0 auto;
 }
-
+/*estilo formulario*/
 .form   {
     position: relative;
     z-index: 1;
@@ -37,14 +34,7 @@ body {
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-
-.sincuenta{
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    background: #D2C2B0;
-    padding: 15px;
-
-}
-.form input {
+.input {
     outline: 0;
     background: #f2f2f2;
     width: 100%;
@@ -54,19 +44,37 @@ body {
     box-sizing: border-box;
     font-size: 14px;
 }
+button {
+    outline: 0;
+    background: #e7e7e7;
+    width: 70%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+button:hover {background: #ddd;}
+/*formato para el div sincuenta*/
 
+.sincuenta{
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    background: #D2C2B0;
+    padding: 15px;
+    text-align: center;
+    justify-content: center;
+}
+/*color para los errores*/
 .error{
-    color: whitesmoke;
+    color: darkred;
 }
 
-button{
 
-}
 /*header.php estilo*/
 
 .header {
     overflow: hidden;
-    background-color: #A6A6A6;
+    background-color: gainsboro;
     height: auto;
 }
 .header .enlace-header {
@@ -91,6 +99,7 @@ i{
 
 }
 
+
 /*estilo perfil artista*/
 .contenedor-perfil{
     height: 40%;
@@ -99,7 +108,6 @@ i{
     margin-top: 10px;
     background-color: #D2C2B0;
     text-align: center;
-    display: block;
 }
 .imagen-perfil {
     width: 50%;
@@ -107,7 +115,6 @@ i{
     margin-top: 20px;
     display: inline;
 }
-
 .contenedor-contenido{
     margin-top: 10px;
     height:max-content;
@@ -115,10 +122,12 @@ i{
     float: right;
 }
 .contenedor-contenido-2{
-    height:max-content;
-    width: 40%;
+    float: left;
+    background-color: #dddddd;
+    width: 30%;
     align-content: center;
-    margin: auto;
+    text-align: center;
+    margin: 1%;
 }
 .obras-publicadas{
     background-color: whitesmoke;
@@ -139,7 +148,7 @@ i{
 
 .publicar-textarea {
     width: 100%;
-    height: 100%;
+    height: 75px;
     padding: .5em;
     border: none;
     resize: none;
