--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,182 +1,23 @@
-@import url('https://fonts.cdnfonts.com/css/aileron');
-
-* {
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+.container-total{
+    background-color: whitesmoke;
+}
+.container-img{
+    background-color: #A6A6A6;
+}
+.card{
+    border-radius:1rem ;
+}
+.already-account{
+    float: right;
 }
 
-body {
-    margin: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-/*estilo registro.php*/
-.contenedor-total{
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-/*centra los dos div en los que están contenidos los formularios*/
-.tabla1{
-   margin: 0 auto;
-}
-.tabla2{
-    margin: 0 auto;
-}
-/*estilo formulario*/
-.form   {
-    position: relative;
-    z-index: 1;
-    background: #D2C2B0;
-    max-width: 360px;
-    margin: 0 auto 10px;
-    padding: 45px;
-    text-align: center;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-.input {
-    outline: 0;
-    background: #f2f2f2;
-    width: 100%;
-    border: 0;
-    margin: 0 0 15px;
-    padding: 15px;
-    box-sizing: border-box;
-    font-size: 14px;
-}
-button {
-    outline: 0;
-    background: #e7e7e7;
-    width: 70%;
-    border: 0;
-    margin: 0 0 15px;
-    padding: 15px;
-    box-sizing: border-box;
-    font-size: 14px;
-}
-button:hover {background: #ddd;}
-/*formato para el div sincuenta*/
-
-.sincuenta{
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    background: #D2C2B0;
-    padding: 15px;
-    text-align: center;
-    justify-content: center;
-}
-/*color para los errores*/
-.error{
+.mensaje-error{
     color: darkred;
 }
-
-
-/*header.php estilo*/
-
-.header {
-    overflow: hidden;
-    background-color: gainsboro;
-    height: auto;
+#navbar{
+    background-color: #A6A6A6;
 }
-.header .enlace-header {
-    float: right;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.header .enlace-header:hover {
-    background-color: #ddd;
-    color: black;
-}
-.imagen-peq{
-    margin-top: 5px;
-}
-
-i{
-    margin-top: 10px;
-
-}
-
-
-/*estilo perfil artista*/
-.contenedor-perfil{
-    height: 40%;
-    width: 20%;
-    position: absolute;
-    margin-top: 10px;
-    background-color: #D2C2B0;
-    text-align: center;
-}
-.imagen-perfil {
-    width: 50%;
-    height: 50%;
-    margin-top: 20px;
-    display: inline;
-}
-.contenedor-contenido{
-    margin-top: 10px;
-    height:max-content;
-    width: 70%;
-    float: right;
-}
-.contenedor-contenido-2{
-    float: left;
-    background-color: #dddddd;
-    width: 30%;
-    align-content: center;
-    text-align: center;
-    margin: 1%;
-}
-.obras-publicadas{
+#card{
     background-color: whitesmoke;
-    clear: right;
-    margin-top: 5% ;
-    padding: 5%;
-    }
-
-
-.publicar-header{
-    padding: .2em .5em;
-    background-color: #eaeaea;
-    color: #3f5563;
+    padding: 10px;
 }
-.publicar-titulo {
-    font-size: 18px;
-}
-
-.publicar-textarea {
-    width: 100%;
-    height: 75px;
-    padding: .5em;
-    border: none;
-    resize: none;
-}
-
-.descripcion:focus {
-    outline: none;
-}
-
-/*botones*/
-
-.boton-publicar{
-    padding: .5em 1em;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    width: 120px;
-    background-color: #D2C2B0;
-    color: #FFFFFF;
-    border-radius: 1.5em;
-}
-
-.primero{
-    float: left;
-}
-.final{
-    float: right;
-}
-
-/*estilo perfil reclutador*/
-
