--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@
 .already-account{
     float: right;
 }
-
 .mensaje-error{
     color: darkred;
 }
@@ -21,6 +20,52 @@
     background-color: whitesmoke;
     padding: 10px;
 }
-.card-post{
+/*perfil-artista*/
+.card-post, .card-feed-perfil{
     padding: 12px;
+    margin-bottom: 10px;
+}
+#feed-perfil{
+    max-width: 120%;
+    margin-bottom: 0.5em;
+    display: block;
+    overflow: auto;
+}
+.gallery{
+    columns: 5 320px;
+    column-gap: 0.5em;
+    margin: 10px;
+}
+/*index reclutador*/
+#perfiles{
+    max-width: 540px;
+    margin-top: 10px;
+}
+
+/*modificar perfil*/
+#modificar-perfil{
+    padding-left: 10%;
+    padding-right: 10%;
+}
+/*perfil artista*/
+
+.publicar-header{
+    padding: .2em .5em;
+    background-color: #eaeaea;
+    color: #3f5563;
+}
+.publicar-titulo {
+    font-size: 20px;
+}
+
+.publicar-textarea {
+    width: 100%;
+    height: 150px   ;
+    padding: .5em;
+    border: none;
+    resize: none;
+}
+
+.descripcion:focus {
+    outline: none;
 }
